# Multiclass_Clasification

./: .dockerignore  .env_example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  init_database.py  main.py  nginx.conf  pyproject.toml  render-backend.yaml  render-frontend.yaml  requirements.txt
client/: index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.jsx
client/src/components/: Button.jsx  Footer.jsx  Navbar.jsx  PredictionList.jsx  StudentPredictionForm.jsx
client/src/layout/: layout.jsx
client/src/pages/: Monitoring.jsx  Prediction.jsx
client/src/routes/: Routes.jsx
client/src/services/: studentService.js
model_training/: random_forest.ipynb  xgboost.ipynb
models/: best_svm_model.pkl  scaler.pkl  xgboost.ipynb
models/trained/: xgboost_multiclass_model.pkl  xgboost_multiclass_pipeline.pkl
notebooks/: EDA.ipynb  data_cleaning.ipynb
server/: config.js  index.js  main.py  package-lock.json  package.json
server/artifacts/: xgboost_multiclass_model.pkl  xgboost_multiclass_pipeline.pkl
server/controllers/: predictController.js
server/database/: connection_db_supabase.js  migrations.py  supabase_client.py
server/models/: checking_data.ipynb  model.pkl  model.py  model_trainer.py  predict.py  predictor.py  preprocessing.py  schemas.py
server/routes/: predict.js
server/src/models/: modelo_svm.pkl  svm_model.py
server/tests/: test_migrations.py  test_predictor.py  test_preprocessing.py
