[project]
name = "multiclass-clasification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cors>=1.0.1",
    "fastapi>=0.115.12",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "notebook>=7.4.2",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "supabase>=2.15.1",
    "uvicorn>=0.34.2",
]
